added link to the github repository

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <h1>WORLD CLOCK</h1>
     <footer>
       Coded by Fernanda Carvalho and is
-      <a href="#" target="_blank">open sourced on Github </a>
+      <a
+        href="https://github.com/fermcarvalho/world-clock-project"
+        target="_blank"
+        >open sourced on Github
+      </a>
     </footer>
     <script src="src/index.js"></script>
   </body>
