added some style to the project

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </div>
 
     <div class="city">
-      <h2>Los Angeles</h2>
-      <div class="date">May 17th 2023</div>
-      <div class="time">1:48:15</div>
+      <div>
+        <h2>Los Angeles</h2>
+        <div class="date">May 17th 2023</div>
+      </div>
+      <div class="time">1:48:15<small>AM</small></div>
     </div>
 
     <div class="city">
