changed some style and HMTL structure

--- a/index.html
+++ b/index.html
@@ -9,27 +9,29 @@
   </head>
   <body>
     <div class="container">
-      <h1>WORLD CLOCK</h1>
+      <h1>World Clock</h1>
+
       <select>
-        <option value="">Select a city</option>
+        <option value="">Select a city..</option>
         <option value="">London</option>
         <option value="">New York</option>
         <option value="">Paris</option>
       </select>
-    </div>
 
-    <div class="city">
-      <div>
-        <h2>Los Angeles</h2>
-        <div class="date">May 17th 2023</div>
+      <div class="city">
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">May 17th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
       </div>
-      <div class="time">1:48:15<small>AM</small></div>
-    </div>
-
-    <div class="city">
-      <h2>Sydney</h2>
-      <div class="date">May 17th 2023</div>
-      <div class="time">1:48:15</div>
+      <div class="city">
+        <div>
+          <h2>Paris</h2>
+          <div class="date">May 17th 2023</div>
+        </div>
+        <div class="time">1:48:15 <small> AM </small></div>
+      </div>
     </div>
     <footer>
       Coded by Fernanda Carvalho and is
