--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock App</title>
   </head>
   <body>
@@ -12,25 +14,25 @@
       <h1>World Clock</h1>
 
       <select>
-        <option value="">Select a city..</option>
+        <option value="">Select a city</option>
         <option value="">London</option>
         <option value="">New York</option>
         <option value="">Paris</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">May 17th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris</h2>
-          <div class="date">May 17th 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:48:15 <small> AM </small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
