added more cities to select and js function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <option value="Europe/London">London</option>
         <option value="American/New_York">New York</option>
         <option value="Europe/Paris">Paris</option>
+        <option value="Asia/Tokyo">Tokyo</option>
+        <option value="Australia/Sydney">Sydney</option>
+        <option value="America/Sao_Paulo">Sydney</option>
       </select>
       <div id="cities">
         <div class="city" id="los-angeles">
@@ -35,8 +38,37 @@
           </div>
           <div class="time"></div>
         </div>
+        <div class="city" id="new-york">
+          <div>
+            <h2>New York</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="sydney">
+          <div>
+            <h2>Sydney</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
+        <div class="city" id="sao-paulo">
+          <div>
+            <h2>Sao Paulo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
       </div>
     </div>
+
     <footer>
       Coded by Fernanda Carvalho and is
       <a
