added font awesome, google fonts, image and other css styles

--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <link rel="stylesheet" href="src/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/3d8f35543e.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <title>World Clock App</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1>World Clock <i class="fa-solid fa-earth-americas"></i></h1>
 
       <select id="city">
         <option value="">Select a city</option>
@@ -70,7 +80,7 @@
     </div>
 
     <footer>
-      Coded by Fernanda Carvalho and is
+      Coded with <i class="fa-solid fa-heart"></i> by Fernanda Carvalho and is
       <a
         href="https://github.com/fermcarvalho/world-clock-project"
         target="_blank"
